# ratatui-sci-fi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.en.md  README.md  cliff.toml  justfile  release.toml
crates/ratatui-sci-fi/: Cargo.toml
crates/ratatui-sci-fi/examples/: capture_screenshots.rs  dashboard.rs  matrix_rain.rs  widget_gallery.rs
crates/ratatui-sci-fi/src/: lib.rs
crates/ratatui-sci-fi/src/audio/: synth.rs  system.rs
crates/ratatui-sci-fi/src/themes/: mod.rs  palette.rs  stylesheet.rs
crates/ratatui-sci-fi/src/widgets/: biometric_chart.rs  boot_sequence.rs  button.rs  divider.rs  gauge.rs  glitch_text.rs  level.rs  list.rs  mod.rs  panel.rs  popup.rs  target_lock.rs  toggle.rs
examples/: agent_console.rs  button.rs  capture_screenshots.rs  charts.rs  charts2.rs  dashboard.rs  data_charts.rs  data_viz.rs  feedback.rs  form_controls.rs  hud_effects.rs  indicators.rs  info_display.rs  inputs.rs  inputs2.rs  matrix_rain.rs  navigation.rs  overlay.rs  visual.rs  widget_gallery.rs
src/: lib.rs
src/audio/: mod.rs  system.rs
src/themes/: mod.rs  palette.rs  stylesheet.rs
src/widgets/: activity_rings.rs  area_chart.rs  badge.rs  barcode.rs  battery_indicator.rs  big_text.rs  biometric_chart.rs  boot_sequence.rs  breadcrumb.rs  button.rs  candlestick.rs  caret.rs  checkbox.rs  collapsible_panel.rs  combo_box.rs  comm_log.rs  compass.rs  countdown_timer.rs  digital_clock.rs  divider.rs  donut_chart.rs  dropdown.rs  gauge.rs  glitch_text.rs  graph.rs  hbar_chart.rs  heat_grid.rs  image_view.rs  key_value.rs  line_chart.rs  list.rs  markdown.rs  marquee.rs  matrix_rain.rs  mod.rs  multi_select_list.rs  noise.rs  number_stepper.rs  oscilloscope.rs  panel.rs  (+35 more)
tests/: comm_log_chat_scenario.rs
