[workspace]
resolver = "3"
members = ["crates/ratatui-sci-fi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Liangdi"]
repository = "https://github.com/Liangdi/ratatui-sci-fi"
description = "Sci-Fi themed widget collection for the Ratatui TUI ecosystem"
keywords = ["ratatui", "tui", "sci-fi", "terminal", "widgets"]
categories = ["command-line-interface"]

[workspace.dependencies]
ratatui = "0.30.1"
ratatui-style = "0.2.0"
crossterm = "0.29.0"
# rodio 0.22: `default-features = false` drops rodio's bundled audio decoders
# (we synthesize raw f32 samples, so we never decode files). We then re-enable
# `playback` only — that pulls in `cpal` and exposes the device-sink + mixer +
# player API (`DeviceSinkBuilder`/`MixerDeviceSink`/`Player`), without any of
# the symphonia codec crates.
rodio = { version = "0.22", default-features = false, features = ["playback"] }

[profile.release]
lto = true
codegen-units = 1
