[package]
name = "ratatui-sci-fi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = []
# Enable the procedural audio engine (rodio + cpal backend). Off by default so
# the widget library doesn't force native audio dev-deps on consumers that only
# want visuals. The `Sound`/`SoundSpec`/`CATALOG` catalog is always available;
# only `AudioSystem` playback needs this feature.
audio = ["dep:rodio"]

[dependencies]
ratatui.workspace = true
ratatui-style.workspace = true
# Optional audio backend. `default-features = false` drops rodio's bundled
# decoders (we synthesize raw f32 samples, so we never decode files).
rodio = { workspace = true, optional = true }

# Only the examples need a terminal/event backend; the library itself stays
# backend-agnostic so downstream apps can pick their own.
[dev-dependencies]
crossterm.workspace = true
