[package]
name = "ratatui-sci-fi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = []
# Enable the procedural audio engine (rodio + cpal backend). Off by default so
# the widget library doesn't force native audio dev-deps on consumers that only
# want visuals. The `Sound`/`SoundSpec`/`CATALOG` catalog is always available;
# only `AudioSystem` playback needs this feature.
audio = ["dep:rodio"]

[dependencies]
ratatui.workspace = true
ratatui-style.workspace = true
# Input-event types for `TextInputState::handle_key`. ratatui's default features
# already pull crossterm in transitively, but declaring it directly keeps the
# `KeyEvent` type stable and intentional. The library itself does no terminal
# I/O — it only consumes the event type the app's chosen backend produces.
crossterm.workspace = true
# Optional audio backend. `default-features = false` drops rodio's bundled
# decoders (we synthesize raw f32 samples, so we never decode files).
rodio = { workspace = true, optional = true }

# Only the examples need a terminal/event backend; the library itself stays
# backend-agnostic so downstream apps can pick their own.
[dev-dependencies]
crossterm.workspace = true
# Headless screenshot capture (`examples/capture_screenshots.rs`): renders the
# example TUIs to an off-screen `Buffer` via `TestBackend`, rasterizes each cell
# to pixels, and emits PNG frames that ffmpeg stitches into looping APNGs. None
# of this ships to consumers — it's a dev-only tool for regenerating README art.
ab_glyph = "0.2"
png = "0.18"

